[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "radiomics-lymphedema"
version = "0.1.0"
description = "Multiclass radiomics + morphology pipeline for lower-extremity lymphedema staging."
readme = "README.md"
requires-python = ">=3.9"
authors = [
  {name = "Peifeng Xie"}
]
dependencies = [
  "numpy>=1.23",
  "pandas>=1.5",
  "scikit-learn>=1.3",
  "scipy>=1.10",
  "matplotlib>=3.7",
  "openpyxl>=3.1",
  "joblib>=1.2",
  "PyYAML>=6.0",
]

[project.optional-dependencies]
explain = ["shap>=0.43"]
xgboost = ["xgboost>=1.7"]
all = ["shap>=0.43", "xgboost>=1.7"]

[tool.setuptools.packages.find]
where = ["src"]
